# improved-octo-invention

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  README.md  README.txt
data/basicObjects/: cube_scaled.ply  sphere.ply
results/: dateiname.ppm  results.txt
src/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  GLMatrix.cpp  GLMatrix.hpp  GLPoint.cpp  GLPoint.hpp  GLVector.cpp  GLVector.hpp  Image.cpp  Image.hpp  Material.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp  SolidRenderer.cpp  SolidRenderer.hpp  Sphere.cpp  Sphere.hpp  WireframeRenderer.cpp  WireframeRenderer.hpp  main.cpp  math.hpp  structs.hpp
waffle/: CGPraktikum  CMakeCache.txt  Makefile  cmake_install.cmake
